# pytest-postgresql

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .rstcheck.cfg  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  MANIFEST.in  Pipfile  README.rst  mypy.ini  pylama.ini  pylintrc  pyproject.toml  pytest.ini  requirements-lint.txt  requirements-test-withpsycopg.txt  requirements-test.txt  setup.cfg  setup.py
.dependabot/: config.yml
.github/: ISSUE_TEMPLATE.rst  PULL_REQUEST_TEMPLATE.rst  dependabot.yml
.github/workflows/: automerge.yml  automergelint.yml  build.yml  dockerised-postgres.yml  linters.yml  pr-check.yml  pre-commit.yml  pypi.yml  single-postgres.yml  tests-container.yml  tests-macos.yml  tests.yml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
newsfragments/: +08bdc5f7.misc.rst  +0ff2173d.misc.rst  +23828db2.misc.rst  +293efc73.misc.rst  +39aa8afb.misc.rst  +4c68f493.misc.rst  +7b24253a.misc.rst  +7b6c5deb.misc.rst  +98311d70.feature.rst  +a32d1721.misc.rst  +a82453f2.misc.rst  +daad0af0.misc.rst  +fb6c538e.break.rst  1015.bugfix.rst  1047.misc.rst  1048.misc.rst  1055.misc.rst  1061.misc.rst  1062.misc.rst  1063.misc.rst  1076.bugfix.rst  1081.misc.rst  1087.break.rst  265.feature.1.rst  265.feature.rst  343.bugfix.rst  598.feature.rst  638.feature.rst  669.misc.rst  672.feature.rst  678.feature.rst  688.misc.rst  691.misc.rst  700.misc.rst  701.misc.rst  702.misc.rst  703.misc.rst  704.misc.rst  706.break.rst  706.misc.rst  (+30 more)
pytest_postgresql/: __init__.py  compat.py  config.py  exceptions.py  executor.py  executor_noop.py  janitor.py  loader.py  plugin.py  retry.py  sql.py
pytest_postgresql/factories/: __init__.py  client.py  noprocess.py  process.py
src/pytest_postgresql/: __init__.py  compat.py  config.py  executor.py  executor_noop.py  factories.py  janitor.py  plugin.py  port.py  retry.py  sql.py
src/pytest_postgresql/factories/: __init__.py  client.py  noprocess.py  process.py
tests/: __init__.py  conftest.py  loader.py  test_executor.py  test_janitor.py  test_loader.py  test_noopexecutor.py  test_postgres_options.py  test_postgres_options_plugin.py  test_postgresql.py  test_postgresql__bad_tmp.py  test_postgresql_session_scope.py  test_template_database.py  test_version.py
tests/docker/: test_nooproc_docker.py  test_noproc_docker.py
tests/examples/: test_drop_test_database.py  test_load.py  test_postgres_options.py
tests/test_sql/: eidastats.sql  test.sql  test2.sql
