[project]
name = "pytest-postgresql"
version = "6.1.1"
description = "Postgresql fixtures and fixture factories for Pytest."
readme = "README.rst"
keywords = ["tests", "pytest", "fixture", "postgresql"]
license = {file = "LICENSE"}
authors = [
    {name = "Grzegorz Śliwiński", email = "fizyk+pypi@fizyk.dev"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
]
dependencies = [
    "pytest >= 6.2",
    "port-for >= 0.7.3",
    "mirakuru",
    "setuptools",
    "psycopg >= 3.0.0"
]
requires-python = ">= 3.8"

[project.urls]
"Source" = "https://github.com/ClearcodeHQ/pytest-postgresql"
"Bug Tracker" = "https://github.com/ClearcodeHQ/pytest-postgresql/issues"
"Changelog" = "https://github.com/ClearcodeHQ/pytest-postgresql/blob/v6.1.1/CHANGES.rst"

[project.entry-points."pytest11"]
pytest_postgresql = "pytest_postgresql.plugin"

[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["pytest_postgresql*"]
exclude = ["tests*"]
namespaces = false

[tool.pytest.ini_options]
xfail_strict=true
addopts = "--max-worker-restart=0 --showlocals --verbose --cov"
testpaths = "tests"
pytester_example_dir = "tests/examples"
norecursedirs = "examples"

[tool.black]
line-length = 100
target-version = ['py39']
include = '.*\.pyi?$'

[tool.ruff]
# Decrease the maximum line length to 79 characters.
line-length = 100
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "D",   # pydocstyle
]

[tool.rstcheck]
report_level = "warning"

[tool.towncrier]
directory = "newsfragments"
single_file=true
filename="CHANGES.rst"
issue_format="`#{issue} <https://github.com/ClearcodeHQ/pytest-postgresql/issues/{issue}>`__"

[tool.towncrier.fragment.feature]
name = "Features"
showcontent = true

[tool.towncrier.fragment.bugfix]
name = "Bugfixes"
showcontent = true

[tool.towncrier.fragment.deprecate]
name = "Deprecations"
showcontent = true

[tool.towncrier.fragment.break]
name = "Breaking changes"
showcontent = true

[tool.towncrier.fragment.misc]
name = "Miscellaneus"
showcontent = false

[tool.tbump.version]
current = "6.1.1"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (\-
    (?P<extra>.+)
  )?
  '''

[tool.tbump.git]
message_template = "Release {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.field]]
# the name of the field
name = "extra"
# the default value to use, if there is no match
default = ""
# For each file to patch, add a [[file]] config
# section containing the path of the file, relative to the
# tbump.toml location.

[[tool.tbump.file]]
src = "pytest_postgresql/__init__.py"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "pyproject.toml"
search = '"Changelog" = "https://github.com/ClearcodeHQ/pytest-postgresql/blob/v{current_version}/CHANGES.rst"'

# You can specify a list of commands to
# run after the files have been patched
# and before the git commit is made

[[tool.tbump.before_commit]]
name = "Build changelog"
cmd = "pipenv run towncrier build --version {new_version} --yes"

# Or run some commands after the git tag and the branch
# have been pushed:
#  [[tool.tbump.after_push]]
#  name = "publish"
#  cmd = "./publish.sh"
